<resources>
    <string name="app_name">HeadHunter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringSearch">Поиск</string>
    <string name="stringFav">Избранное</string>
    <string name="stringResponses">Отклики</string>
    <string name="stringMessages">Сообщения</string>
    <string name="stringProfile">Профиль</string>
</resources>